# pdf-folio

./: Cargo.toml  Plan.md  README.md  STYLE_SYSTEM.md
crates/pdf-folio-core/: Cargo.toml
crates/pdf-folio-core/src/: annotations.rs  document.rs  lib.rs  renderer.rs
crates/pdf-folio-library/: Cargo.toml
crates/pdf-folio-library/src/: db.rs  importer.rs  indexer.rs  lib.rs  watcher.rs
crates/pdf-folio-main/: Cargo.toml
crates/pdf-folio-main/src/: main.rs
crates/pdf-folio-ui/: Cargo.toml
crates/pdf-folio-ui/src/: app.rs  lib.rs  messages.rs  theme.rs
crates/pdf-folio-ui/src/style/: book.rs  classes.rs  components.rs  layout.rs  mod.rs  side_border.rs  tokens.rs
crates/pdf-folio-ui/src/views/: library.rs  mod.rs  settings.rs  sidebar.rs  viewer.rs
crates/pdf-folio-ui/styles/: application.kdl
crates/pdf-folio-ui/styles/components/: core.kdl  library.kdl
crates/pdf-folio-ui/styles/themes/: espresso.kdl  light.kdl
