[package]
name = "pdf-folio-library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
directories.workspace = true
notify.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tantivy.workspace = true
tracing.workspace = true
